--- a/FruitSupply.Desktop/FruitSupply.Desktop.csproj
+++ b/FruitSupply.Desktop/FruitSupply.Desktop.csproj
@@ -14,6 +14,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\FruitSupply.Persistance\FruitSupply.Persistance.csproj" />
     <ProjectReference Include="..\FruitSupply\FruitSupply.csproj" />
   </ItemGroup>
 </Project>
