--- a/FruitSupply/FruitSupply.csproj
+++ b/FruitSupply/FruitSupply.csproj
@@ -17,6 +17,12 @@
     <PackageReference Include="Avalonia.ReactiveUI" Version="$(AvaloniaVersion)" />
     <!--Condition below is needed to remove Avalonia.Diagnostics package from build output in Release configuration.-->
     <PackageReference Condition="'$(Configuration)' == 'Debug'" Include="Avalonia.Diagnostics" Version="$(AvaloniaVersion)" />
+    <PackageReference Include="MessageBox.Avalonia" Version="3.1.2" />
     <PackageReference Include="ReactiveUI.Fody" Version="19.5.31" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\FruitSupply.Domain\FruitSupply.Domain.csproj" />
+    <ProjectReference Include="..\FruitSupply.Persistance\FruitSupply.Persistance.csproj" />
   </ItemGroup>
 </Project>
